manifests/k8s_task_runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: k8s-task-runner
  name: k8s-task-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-task-runner
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-task-runner
    spec:
      serviceAccountName: k8s-task-runner-sa
      containers:
      - image: k3d-registry.localhost:5000/k8s_task_runner:0.5
        name: k8s-task-runner
        resources: {}
        imagePullPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-task-runner
  name: k8s-task-runner-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: k8s-task-runner
status:
  loadBalancer: {}
---
# This is to route requests from localhost into k3d cluster network
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-task-runner-svc
            port:
              number: 80
